--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -12,61 +12,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.12",
-    "@angular/common": "8.2.12",
-    "@angular/compiler": "8.2.12",
-    "@angular/core": "8.2.12",
-    "@angular/forms": "8.2.12",
-    "@angular/platform-browser": "8.2.12",
-    "@angular/platform-browser-dynamic": "8.2.12",
-    "@angular/platform-server": "8.2.12",
-    "@angular/router": "8.2.12",
+    "@angular/animations": "^10.0.10",
+    "@angular/common": "^10.0.10",
+    "@angular/compiler": "^10.0.10",
+    "@angular/core": "^10.0.10",
+    "@angular/forms": "^10.0.10",
+    "@angular/platform-browser": "^10.0.10",
+    "@angular/platform-browser-dynamic": "^10.0.10",
+    "@angular/platform-server": "^10.0.10",
+    "@angular/router": "^10.0.10",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
-    "bootstrap": "^4.3.1",
-    "core-js": "^3.3.3",
-    "jquery": "3.4.1",
-    "oidc-client": "^1.9.1",
-    "popper.js": "^1.16.0",
-    "rxjs": "^6.5.3",
-    "zone.js": "0.9.1",
-    "@angular/cdk": "^8.1.2",
-    "@mdi/font": "^3.8.95",
-    "@ng-bootstrap/ng-bootstrap": "^5.0.0",
-    "chart.js": "^2.8.0",
+    "bootstrap": "^4.5.2",
+    "core-js": "^3.6.5",
+    "oidc-client": "^1.10.1",
+    "popper.js": "^1.16.1",
+    "rxjs": "^6.6.2",
+    "zone.js": "^0.10.3",
+    "@angular/cdk": "^10.1.3",
+    "@mdi/font": "^5.5.55",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "chart.js": "^2.9.3",
     "compass-mixins": "^0.12.10",
-    "ng2-charts": "^2.3.0",
-    "node-sass": "^4.13.1",
-    "tslib": "^1.9.0"
+    "ng2-charts": "^2.3.3",
+    "node-sass": "^4.14.1",
+    "tslib": "^2.0.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.26",
-    "@angular/cli": "^8.3.26",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.12",
-    "@types/jasmine": "~3.4.4",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/node": "~12.11.6",
-    "codelyzer": "^5.2.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.0.2",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "typescript": "3.5.3",
-    "@types/chartist": "^0.9.46",
-    "@types/datatables.net": "^1.10.17",
-    "@types/jquery": "^3.3.31",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0"
+    "@angular-devkit/build-angular": "^0.1000.6",
+    "@angular/cli": "^10.0.6",
+    "@angular/compiler-cli": "^10.0.10",
+    "@angular/language-service": "^10.0.10",
+    "@types/jasmine": "^3.5.12",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^14.6.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "^3.6.0",
+    "jasmine-spec-reporter": "^5.0.2",
+    "karma": "^5.1.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "typescript": "^3.9.7",
+    "@types/chartist": "^0.11.0",
+    "@types/datatables.net": "^1.10.19",
+    "protractor": "^7.0.0",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.3"
   },
   "optionalDependencies": {
-    "node-sass": "^4.12.0",
-    "protractor": "~5.4.2",
-    "ts-node": "~8.4.1",
-    "tslint": "~5.20.0"
+    "node-sass": "^4.14.1",
+    "protractor": "^7.0.0",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.3"
   }
 }
