--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -13,30 +13,35 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^10.0.10",
+    "@angular/cdk": "^10.1.3",
     "@angular/common": "^10.0.10",
     "@angular/compiler": "^10.0.10",
     "@angular/core": "^10.0.10",
     "@angular/forms": "^10.0.10",
+    "@angular/localize": "^10.0.10",
     "@angular/platform-browser": "^10.0.10",
     "@angular/platform-browser-dynamic": "^10.0.10",
     "@angular/platform-server": "^10.0.10",
     "@angular/router": "^10.0.10",
+    "@mdi/font": "^5.5.55",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.5.2",
+    "chart.js": "^2.9.3",
+    "compass-mixins": "^0.12.10",
     "core-js": "^3.6.5",
+    "ng2-charts": "^2.3.3",
+    "node-sass": "^4.14.1",
     "oidc-client": "^1.10.1",
     "popper.js": "^1.16.1",
     "rxjs": "^6.6.2",
-    "zone.js": "^0.10.3",
-    "@angular/cdk": "^10.1.3",
-    "@mdi/font": "^5.5.55",
-    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
-    "chart.js": "^2.9.3",
-    "compass-mixins": "^0.12.10",
-    "ng2-charts": "^2.3.3",
-    "node-sass": "^4.14.1",
-    "tslib": "^2.0.1"
+    "rxjs-tslint-rules": "^4.34.0",
+    "tslib": "^2.0.1",
+    "tslint-consistent-codestyle": "^1.16.0",
+    "tslint-defocus": "^2.0.6",
+    "tslint-eslint-rules": "^5.4.0",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1000.6",
